--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
-  "private": true,
+  "name": "regioned-image",
+  "version": "1.0.0",
+  "description": "Breaks an image into regions of contiguous pixels.",
+  "author": "Chris Patuzzo <chris@patuzzo.co.uk>",
+  "license": "MIT",
+  "main": "lib/regionedImage",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tuzz/regioned-image"
+  },
+  "keywords": [
+    "regioned",
+    "image",
+    "canvas",
+    "pixel",
+    "color",
+    "region",
+    "flood",
+    "fill",
+    "merge",
+    "boundary"
+  ],
   "devDependencies": {
-    "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jasmine-node": "^0.2.1"
   }
