--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "devDependencies": {
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jasmine-node": "^0.2.1"
+  },
+  "dependencies": {
+    "hex-rgb-converter": "0.0.2",
+    "n-dimensional-flood-fill": "^1.0.0",
+    "raw-image": "^1.0.0",
+    "underscore": "^1.7.0"
   }
 }
