--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "grunt-jasmine-node": "^0.2.1"
   },
   "dependencies": {
-    "hex-rgb-converter": "0.0.2",
+    "hex-rgb-converter": "^0.0.2",
     "n-dimensional-flood-fill": "^1.0.0",
-    "raw-image": "^1.0.0",
+    "raw-image": "^1.1.1",
     "underscore": "^1.7.0"
   }
 }
